Homework6/UserService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework6userservice
  labels:
    app: homework6userservice
spec:
  type: LoadBalancer
  ports:
  - name: homework6-http
    port: 88
    protocol: TCP
    targetPort: 8080
  - name: homework6-https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: homework6userservice
